--- a/.dockerignore
+++ b/.dockerignore
@@ -1,30 +1,82 @@
-**/.classpath
-**/.dockerignore
-**/.env
-**/.git
-**/.gitignore
-**/.project
-**/.settings
-**/.toolstarget
-**/.vs
-**/.vscode
+# Directories
+**/bin/
+**/obj/
+**/out/
+**/TestResults/
+**/.vs/
+**/.vscode/
+**/.idea/
+**/node_modules/
+**/charts/
+
+# Files
 **/*.*proj.user
+**/*.suo
+**/*.cache
+**/.DS_Store
+**/Thumbs.db
 **/*.dbmdl
 **/*.jfm
-**/azds.yaml
-**/bin
-**/charts
-**/docker-compose*
-**/Dockerfile*
-**/node_modules
 **/npm-debug.log
-**/obj
-**/secrets.dev.yaml
-**/values.dev.yaml
-LICENSE
-README.md
-!**/.gitignore
+
+# Git
+**/.git
+**/.gitignore
+**/.gitattributes
 !.git/HEAD
 !.git/config
 !.git/packed-refs
 !.git/refs/heads/**
+
+# Documentation
+**/README.md
+**/docs/
+**/*.md
+!**/README.md
+
+# Docker
+**/.dockerignore
+**/docker-compose*
+**/Dockerfile*
+**/.docker/
+
+# CI/CD
+**/.github/
+**/.gitlab-ci.yml
+**/.travis.yml
+**/azds.yaml
+
+# Build artifacts
+**/packages/
+
+# Logs
+**/logs/
+**/*.log
+
+# Database files
+**/*.db
+**/*.db-shm
+**/*.db-wal
+
+# Environment files
+**/.env
+**/.env.*
+**/secrets.dev.yaml
+**/values.dev.yaml
+
+# Kubernetes
+**/k8s/
+
+# Scripts
+**/scripts/
+
+# Tests
+**/tests/
+**/*Tests/
+**/*.Tests/
+
+# IDE
+**/.classpath
+**/.project
+**/.settings
+**/.toolstarget
