--- a/src/Peo.Web.Bff/Peo.Web.Bff.csproj
+++ b/src/Peo.Web.Bff/Peo.Web.Bff.csproj
@@ -30,7 +30,7 @@
 	</ItemGroup>
 
 	<!-- 1) Gera openapi.json (BFF) -->
-	<Target Name="GenerateOpenApiDoc" AfterTargets="Build" Condition="'$(DesignTimeBuild)' != 'true' AND Exists('$(BffNswagConfig)')">
+	<Target Name="GenerateOpenApiDoc" AfterTargets="Build" Condition="'$(DesignTimeBuild)' != 'true' AND '$(SkipNSwag)' != 'true' AND Exists('$(BffNswagConfig)')">
 		<PropertyGroup>
 			<_NSwagExe Condition="'$(NSwagExe_Net90)' != ''">$(NSwagExe_Net90)</_NSwagExe>
 			<_NSwagExe Condition="'$(_NSwagExe)' == '' AND '$(NSwagExe_Net80)' != ''">$(NSwagExe_Net80)</_NSwagExe>
@@ -51,7 +51,7 @@
 		<SpaWorkingDir>$(MSBuildProjectDirectory)\..\Peo.Web.Spa</SpaWorkingDir>
 	</PropertyGroup>
 
-	<Target Name="GenerateSpaClientFromBff" AfterTargets="GenerateOpenApiDoc" Condition="'$(DesignTimeBuild)' != 'true' AND Exists('$(SpaClientNswag)') AND Exists('$(SpaOpenApi)')">
+	<Target Name="GenerateSpaClientFromBff" AfterTargets="GenerateOpenApiDoc" Condition="'$(DesignTimeBuild)' != 'true' AND '$(SkipNSwag)' != 'true' AND Exists('$(SpaClientNswag)') AND Exists('$(SpaOpenApi)')">
 		<PropertyGroup>
 			<_NSwagExe Condition="'$(NSwagExe_Net90)' != ''">$(NSwagExe_Net90)</_NSwagExe>
 			<_NSwagExe Condition="'$(_NSwagExe)' == '' AND '$(NSwagExe_Net80)' != ''">$(NSwagExe_Net80)</_NSwagExe>
