--- a/docker/Dockerfile.Faturamento
+++ b/docker/Dockerfile.Faturamento
@@ -38,8 +38,11 @@ RUN dotnet publish "Peo.Faturamento.WebApi.csproj" -c Release -o /app/publish /p
 FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS runtime
 WORKDIR /app
 
+# Install curl for health checks
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+
 # Create non-root user for security
-RUN groupadd -r appuser && useradd -r -g appuser appuser
+RUN groupadd -g 1000 appuser && useradd -u 1000 -g appuser -s /bin/bash appuser
 
 # Copy published application
 COPY --from=publish /app/publish .
@@ -54,12 +57,13 @@ USER appuser
 EXPOSE 8080
 
 # Environment variables
-ENV ASPNETCORE_URLS=http://+:8080
-ENV ASPNETCORE_ENVIRONMENT=Production
+ENV ASPNETCORE_URLS=http://+:8080 \
+    ASPNETCORE_ENVIRONMENT=Production \
+    DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=false
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:8080/health || exit 1
+    CMD curl -f http://localhost:8080/alive || exit 1
 
 # Set entry point
 ENTRYPOINT ["dotnet", "Peo.Faturamento.WebApi.dll"]
