--- a/src/Peo.Identity.WebApi/Peo.Identity.WebApi.csproj
+++ b/src/Peo.Identity.WebApi/Peo.Identity.WebApi.csproj
@@ -10,6 +10,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<PackageReference Include="AspNetCore.HealthChecks.Rabbitmq" Version="9.0.0" />
+	<PackageReference Include="AspNetCore.HealthChecks.Sqlite" Version="9.0.0" />
+	<PackageReference Include="AspNetCore.HealthChecks.SqlServer" Version="9.0.0" />
 	<PackageReference Include="IdentityModel" Version="7.0.0" />
 	<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.7" />
 	<PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
